--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body>
   <div class="container">
     <div class="card">
-      <img class="avatar" src="c:\Users\user\AppData\Local\Packages\5319275A.WhatsAppDesktop_cv1g1gvanyjgm\TempState\861578D797AEB0634F77AFF3F488CCA2\WhatsApp Image 2025-09-27 at 02.31.09_e013e781.jpg" alt="BSD City Commercial">
+      <img class="avatar" src="C:\Users\user\Downloads\WhatsApp Image 2025-09-27 at 02.31.08_eb6c8e3e.jpg" alt="BSD City Commercial">
       <h1>@megaindah_properti</h1>
       <p class="bio">Promosi properti komersial BSD City — daftar proyek & brochure.</p>
 
